--- a/marte.html
+++ b/marte.html
@@ -7,14 +7,15 @@
 	<h1>Tu peso en otro planeta</h1>
 	<p>En la tierra pesas distinto que en marte o jupiter</p>
 	<script>
+		var usuario = prompt("Cual es tu peso?");
+		var peso_tierra = parseInt(usuario);
 		var g_tierra = 9.8;
 		var g_marte = 3.7;
-		var g_jupiter = 24.8;
-		var peso_tierra = 77;
+		var g_jupiter = 24.8;		
 		var peso_final;
 		peso_final = (peso_tierra*g_marte)/g_tierra;
 		peso_final = parseInt(peso_final);
-		document.write(peso_final);
+		document.write("Tu peso en marte es: <strong>" + peso_final + " kilos <strong>");
 	</script>
 </body>
 </html>
