aprendiendo pasar valores por input de texto y botones

--- a/canvas/dibujando.html
+++ b/canvas/dibujando.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	<h1>Aprendiendo a dibujar en canvas</h1>
+	<p>¿Cuántas lineas quiere dibujar?
+		<input type="text" id="texto_linea">
+		<input type="button" value="A darle!" id="botoncito">
+	</p>
 	<canvas width="300" height="300" id="dibujito"></canvas>
 	<p>Este es tu dibujo</p>
 	
