--- a/teclas/fechas.html
+++ b/teclas/fechas.html
@@ -5,7 +5,7 @@
 	<title>dibujando con teclas</title>
 </head>
 <body>
-	<canvas width="300" height="300"></canvas>
+	<canvas width="300" height="300" id="are_de_dibujo" ></canvas>
 	<p>Mueve las flechas para dibujar</p>
 
 	<script src="eventos.js"></script>
