villa platzi carga de tile y animales

--- a/villaplatzi/villa.html
+++ b/villaplatzi/villa.html
@@ -5,6 +5,9 @@
 	<title>Villa Platzi</title>
 </head>
 <body>
+	<canvas id="villaplatzi" width="500" height="500">
+		
+	</canvas>
 	<script src="platzi.js"></script>
 </body>
 </html>
